upgrade to TinkerPop3.7.1 added module-info.java